# configur8

./: .coveragerc  .flake8  .gitignore  CHANGELOG.md  Makefile  README.md  Taskfile.yaml  mypy.ini  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: publish.yml  test.yml
.taskfiles/: pdm.yml
src/configur8/: CHANGELOG.md  __about__.py  __init__.py  cfg.py  core.py  email.py  env.py  path.py  types.py  url.py  util.py
tests/: conftest.py  test_cfg.py  test_core_url.py
tests/env/: test_bool.py  test_bool.yml  test_email.py  test_email.yml  test_float.py  test_float.yml  test_int.py  test_int.yml  test_path.py  test_path.yml  test_str.py  test_str.yml  test_url.py  test_url.yml
