[project]
name = "configur8"
description = "Type-safe configuration and validation library"
authors = [{ name = "Nick Joyce", email = "nick@stratuscode.com" }]
requires-python = ">=3.7,<4.0"
readme = "README.md"
keywords = [
  "config",
  "configuration",
  "configurations",
  "settings",
  "env",
  "environment",
  "environments",
  "application",
  "python-config",
]
classifiers = [
    "Topic :: Software Development",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
license = { text = "MIT" }
dynamic = ["version"]

dependencies = [
    "email-validator>=1.3.1",
    "typing-extensions>=4.0.0",
]

[tool.pdm.dev-dependencies]
dev = [
    "codecov",
    "flake8",
    "mypy",
    "pytest-cov",
    "pytest-mock",
    "pytest-mypy-plugins",
    "pytest",
    "types-pyyaml",
    "setuptools>=67.2.0",
]

[tool.pdm.version]
source = "file"
path = "src/configur8/__about__.py"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pytest.ini_options]
addopts = """
  --cov-report html
  --cov=src
  --cov-fail-under=80
  --mypy-ini-file=./mypy.ini
  --mypy-only-local-stub
  --ignore=__pypackages__
"""
