[project]
name = "configur8"
description = "Type-safe configuration and validation library"
authors = [{ name = "Nick Joyce", email = "nick@boxdesign.co.uk" }]
requires-python = ">=3.8"
readme = "README.md"
keywords = [
  "config",
  "configuration",
  "configurations",
  "settings",
  "env",
  "environment",
  "environments",
  "application",
  "python-config",
]
classifiers = [
  "Topic :: Software Development",
  "Programming Language :: Python :: 3.12",
]
license = { text = "MIT" }
dynamic = ["version"]

dependencies = ["email-validator"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
addopts = """
  --cov-report html
  --cov=src
  --cov-fail-under=80
  --mypy-ini-file=./mypy.ini
  --mypy-only-local-stub
  --ignore=__pypackages__
"""

[tool.pdm.version]
source = "file"
path = "src/configur8/__about__.py"


[dependency-groups]
dev = [
  "codecov",
  "mypy",
  "pytest-cov",
  "pytest-mock",
  "pytest-mypy-plugins",
  "pytest",
  "ruff",
  "types-pyyaml",
]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
