[bdist_wheel]
universal = true

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    configur8
    tests

[options]
install_requires =

[options.extras_require]
dev =
    pytest >= 5.4
    pytest-cov >= 2.8
    pytest-mock >= 2.0
    pytest-mypy-plugins >= 1.6.1
    mypy >= 0.770
    flake8 >= 3.7
    codecov >= 2.0
    twine >= 3.1

[mypy]
check_untyped_defs = True
ignore_errors = False
ignore_missing_imports = True
strict_optional = True
